content and table

--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -11,7 +11,7 @@ images:
 Пожалуй, одна из самых актуальных тем для обсуждения. Скажу сразу, про McDonalds и прочие фастфуды вы здесь не прочитаете. Я хочу рассказать, как, что и где можно купить для здорового рациона семьи. 
 
 Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
-С этим вопросом столкнулись и мы. А теперь, почти через пол-года жизни в Сан Франциско, я готова поведать, что же мы едим, где мы покупаем продукты и сколько нам это стоит.
+С этим вопросом столкнулись и мы. И теперь, почти через пол-года жизни в Сан Франциско я хочу рассказать, что же мы едим, где мы покупаем продукты и сколько это стоит.
  
 <!--separate--> 
 
@@ -21,7 +21,23 @@ images:
 Не граммы/килограммы, а паунды (1 паунд=453.6 гр.). Желательно иметь хотя бы примерное представление об этих незнакомых нам понятиям перед своим первым походом за продуктами.
 
 Итак, с мерами измерения разобрались, можно приступать к покупкам. 
+
 Предлагаю начать с фруктов и овощей. В нашем рационе они занимают первое и самое большое место. 
+
+Фрукты и овощи можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
+
+Farmer's market - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цена на рынке очень близкие к тому, что вы найдете в супермаркете. С отличием в том, что на рынке больше вероятность купить Organic. 
+
+Обычно местные жители уже знают, какой рынок им нравится больше и ходят туда каждую неделю.
+
+Второй и наш вариант - China town. Почему я пишу "наш вариант"? Потому что им можно пользоваться только если живешь неподалеку. В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это по сути большой продуктовый рынок. Здесь можно купить все известные и не известные нам фрукты и овощи. И цены отличаются раза в 3-4 по отношению к ценам в супермаркете или на farmer's market. 
+
+Вот несколько примеров (цена указана за 1 pound, то есть 453гр):
+
+|         |China Town|Супермаркет|
+|:---------:|:----------:| :----------:|
+| Черешня |$1|$2,99|
+
 
 
 
