--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -8,16 +8,15 @@ thumbnail:
 images:
 ---
 
-Пожалуй, одна из самых актуальных тем для обсуждения. Скажу сразу, про McDonalds и прочие фастфуды вы здесь не прочитаете. Я хочу рассказать, как, что и где можно купить для здорового рациона семьи. 
-
-Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
+Пожалуй, это одна из самых актуальных тем для обсуждения. Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
 С этим вопросом столкнулись и мы. И теперь, почти через пол-года жизни в Сан Франциско я хочу рассказать, что же мы едим, где мы покупаем продукты и сколько это стоит.
- 
+
+Скажу сразу, про McDonalds и прочие фастфуды вы здесь не прочитаете. Я хочу рассказать, как, что и где можно купить для здорового рациона семьи. 
+
 <!--separate--> 
+Перед первым походом за продуктами лучше немного подготовиться, ведь в магазине любой европейский путешественник очень удивится совершенно незнакомым мерам измерения.
 
-Первое с чем столкнется европейский путешественник - это совершенно незнакомые меры измерения.
-
-На милях вместо километров дело не остановилось. Здесь не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.). 
+На милях вместо километров в Америке дело не остановилось. Здесь не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.). 
 Не граммы/килограммы, а паунды (1 паунд=453.6 гр.). Желательно иметь хотя бы примерное представление об этих незнакомых нам понятиям перед своим первым походом за продуктами.
 
 Итак, с мерами измерения разобрались, можно приступать к покупкам. 
@@ -26,17 +25,31 @@ images:
 
 Фрукты и овощи можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
 
-Farmer's market - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цена на рынке очень близкие к тому, что вы найдете в супермаркете. С отличием в том, что на рынке больше вероятность купить Organic. 
+Farmer's market - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цена на рынке очень близкие к тому, что вы найдете в супермаркете. Но отличием в том, что на рынке больше вероятность купить Organic. и можно пообщаться с человеком, который вырастил их. 
 
 Обычно местные жители уже знают, какой рынок им нравится больше и ходят туда каждую неделю.
 
-Второй и наш вариант - China town. Почему я пишу "наш вариант"? Потому что им можно пользоваться только если живешь неподалеку. В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это по сути большой продуктовый рынок. Здесь можно купить все известные и не известные нам фрукты и овощи. И цены отличаются раза в 3-4 по отношению к ценам в супермаркете или на farmer's market. 
+Второй и наш вариант: China town. Почему "наш вариант"? Потому что мы живем неподалеку и можем позволить ходить туда. На транспорте, конечно, мы бы туда не поехали. В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это по сути большой продуктовый рынок. Здесь можно купить все известные и не известные нам фрукты и овощи. Цены отличаются раза в 3-4 по отношению к ценам в супермаркете или на farmer's market и продукты всегда свежие.
 
-Вот несколько примеров (цена указана за 1 pound, то есть 453гр):
+Ниже примеры цен (за 1 pound, то есть 453гр):
 
-|         |China Town|Супермаркет|
-|:---------:|:----------:| :----------:|
-| Черешня |$1|$2,99|
+|                     | China Town | Супермаркет |
+|:-------------------:|:----------:|:-----------:|
+|       Черешня       |    $99     |    $2,99    |
+|      Виноград       |    $99     |    $2,99    |
+|        Манго        |   $1,69    | $1.69 за шт |
+|      Клубника       |   $1,50    |    $4,99    |
+|  Малина (150? гр.)  |     $1     |    $4.99    |
+| Голубика (150? гр.) |     $1     |    $3.50    |
+|      Апельсины      |    ¢79     |             |
+|       Яблоки        |    ¢99     |             |
+|      Помидоры       |    ¢79     |             |
+
+
+Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы и ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Еще рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
+
+
+
 
 
 
@@ -44,21 +57,7 @@ Farmer's market - это событие, которое проходит в ка
 Обзор мой будет состоять только из тех магазинов, в которые мы попадаем живя в городе. Я уверена, что в окрестностях есть много прекрасных магазинов о существовании которых мы не знаем. Один из таких магазинов - Costco. Это оптовый магазин, где народ покупает все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Так как у нас нет машины, туда мы не едим.
 
 Поэтому сегодня в своем рассказе я остановлюсь на: Safeway, Trader Joe's, China Town Whole Foods. Здесь мы покупаем продукты.
-
-Хочу начать с фруктов и овощей. Потому что, во-первых, про них проще рассказать. А во-вторых, их мы едим больше всего.
-
-Где можно купить фрукты и овощи?
-В любом супермаркете, farmer's market, China Town
-
-Нам очень повезло, ровно по середине между нашим домом и финансовым центром города находится China Town. 
-
-
-
-
-
-
-
-
+  
 
 
 
