--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -11,7 +11,7 @@ images:
 Пожалуй, это одна из самых актуальных тем для обсуждения. Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
 С этим вопросом столкнулись и мы. И теперь, почти через пол-года жизни в Сан Франциско я хочу рассказать, что же мы едим, где мы покупаем продукты и сколько это стоит.
 
-Скажу сразу, про McDonalds и прочие фастфуды вы здесь не прочитаете. Я хочу рассказать, как, что и где можно купить для здорового рациона семьи. 
+Скажу сразу, про McDonalds и прочие фастфуды вы здесь не прочитаете. Я хочу рассказать о здоровой еде, которой можно кормит семью.
 
 <!--separate--> 
 Перед первым походом за продуктами лучше немного подготовиться, ведь в магазине любой европейский путешественник очень удивится совершенно незнакомым мерам измерения.
@@ -23,7 +23,7 @@ images:
 
 Предлагаю начать с фруктов и овощей. В нашем рационе они занимают первое и самое большое место. 
 
-Фрукты и овощи можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
+**Фрукты и овощи** можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
 
 Farmer's market - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цена на рынке очень близкие к тому, что вы найдете в супермаркете. Но отличием в том, что на рынке больше вероятность купить Organic. и можно пообщаться с человеком, который вырастил их. 
 
@@ -46,15 +46,18 @@ Farmer's market - это событие, которое проходит в ка
 |      Помидоры       |    ¢79     |             |
 
 
-Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы и ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Еще рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
+Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы и ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
+
+Теперь перейдем к супермаркетам. В черте города я знаю 4 супермаркета: Whole Foods, Trader Joe's, Safeway и Costco.
+
+Whole Foods. Здесь все прекрасно, вкусно и чаще всего полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
+Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то можно остаться без кошелька.
+
+Costco. Оптовый магазин, в который нужно иметь клубную карту. Расположен так, что добраться туда можно только на машине. Здесь покупают все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Мы туда не ходим, поэтому это все, что я могу о нем рассказать.
 
 
 
 
-
-
-
-Обзор мой будет состоять только из тех магазинов, в которые мы попадаем живя в городе. Я уверена, что в окрестностях есть много прекрасных магазинов о существовании которых мы не знаем. Один из таких магазинов - Costco. Это оптовый магазин, где народ покупает все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Так как у нас нет машины, туда мы не едим.
 
 Поэтому сегодня в своем рассказе я остановлюсь на: Safeway, Trader Joe's, China Town Whole Foods. Здесь мы покупаем продукты.
   
