--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -48,7 +48,10 @@ Farmer's market - это событие, которое проходит в ка
 
 Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы и ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
 
-Теперь перейдем к супермаркетам. В черте города я знаю 4 супермаркета: Whole Foods, Target, Costco Trader Joe's, Safeway и .
+Теперь перейдем к супермаркетам. В черте города я знаю 4 супермаркета: Whole Foods, Target, Costco, Trader Joe's, Safeway.
+
+Здесь мы покупаем все, что не нашли в China town-e. 
+С вегетарианскими продуктами в америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
 
 **Whole Foods**. Здесь все прекрасно, вкусно и чаще всего полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
 Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то можно остаться без кошелька.
@@ -57,21 +60,19 @@ Farmer's market - это событие, которое проходит в ка
 
 **Target**. Еда, одежда, техника, детские игрушки и много всего другого. Цены средние, зато есть магазин в финансовом районе города. Иногда удобно туда зайти.
 
-И теперь самое интересное: Trader Joe's и Safeway. Оба эти магазина находятся меньше, чем в пяти минутах ходьбы от нашего дома и здесь мы все и закупаем. Они прекрасно дополняют друг друга.
+И теперь самое интересное: Trader Joe's и Safeway. Оба эти магазина находятся рядом с домом и здесь мы все и закупаем. Они прекрасно дополняют друг друга.
 
-**Safeway**. Здесь уже не кнтролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтомму будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50.
+**Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
+И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал. - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
 
 **Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее и находится рядом с домом. Продукты хорошего качества и можно купить много всего интересного и необычного. Особенно если Азбуку Вкуса в Питере ты обходил стороной. Большинство продуктов мы покупаем именно здесь. 
 Из интересного, первое время нам очень нравилась индийская замороженная еда. Хоть это и полуфабрикат, но состав очень хороший. Разогрел в духовке и по вкусу тоже самое, что в ресторане. Только в 3 раза дешевле.
 Еще здесь много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
-Очень удобно если ты где-то гуляешь зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены варьируются от $2.99 до $4.50.
+Очень удобно если ты где-то гуляешь зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4.50.
 
+Я постаралась быть краткой, хоть, возможно, это и не очень хорошо получилось. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут кушаем. 
 
-
-
-
-
-Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72.
+Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72. Приятного аппетита! 
 {% include image src="trader joe's bag.jpg" %}
 
 * cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью ... гр ...$
