--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -4,6 +4,7 @@ title: Что едят в Америке?
 date: 2017-07-04 11:25:24 -0800
 comments: true
 original-date: 2017-07-04
+hidden: true
 thumbnail: 
 images:
 ---
