--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -1,24 +1,24 @@
 ---
 layout: post
-title: Что едят в Америке?
+title: Что мы едим в Америке?
 date: 2017-07-04 11:25:24 -0800
 comments: true
 original-date: 2017-07-04
 hidden: true
-thumbnail: 
+thumbnail: IMG_1296.jpg
 images:
 ---
 
-Пожалуй, это одна из самых актуальных тем для обсуждения. Первое, с чем вы столкнетесь, как только приедете в штаты - это еда. Вам нужно будет что-то поесть. 
-С этим вопросом столкнулись и мы. И теперь, почти через пол-года жизни в Сан Франциско я хочу рассказать, что же мы едим, где мы покупаем продукты и сколько это стоит.
+Пожалуй, один из самых актуальных вопросов на каждой кухне: "Что бы поесть?".
 
-Скажу сразу, про McDonalds и прочие фастфуды вы здесь не прочитаете. Я хочу рассказать о здоровой еде, которой можно кормит семью.
+Мы уже некоторое время живем в штатах и немного сориентировались в продуктах, поэтому сегодня я хочу я рассказать вам, что же мы здесь едим, где мы покупаем продукты и сколько это стоит.
 
 <!--separate--> 
-Перед первым походом за продуктами лучше немного подготовиться, ведь в магазине любой европейский путешественник очень удивится совершенно незнакомым мерам измерения.
+Перед первым походом за продуктами лучше немного подготовиться, ведь в магазине любой европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не закончилось. 
 
-На милях вместо километров в Америке дело не остановилось. Здесь не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.). 
-Не граммы/килограммы, а паунды (1 паунд=453.6 гр.). Желательно иметь хотя бы примерное представление об этих незнакомых нам понятиям перед своим первым походом за продуктами.
+Желательно иметь хотя бы примерное представление о том, что будет написано на упаковке:
+здесь не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.),
+не граммы/килограммы, а паунды (1 паунд=453.6 гр.). 
 
 Итак, с мерами измерения разобрались, можно приступать к покупкам. 
 
@@ -36,15 +36,15 @@ Farmer's market - это событие, которое проходит в ка
 
 |                     | China Town | Супермаркет |
 |:-------------------:|:----------:|:-----------:|
-|       Черешня       |    $99     |    $2,99    |
-|      Виноград       |    $99     |    $2,99    |
+|       Черешня       |   $0,99    |    $2,99    |
+|      Виноград       |   $0,99    |    $2,99    |
 |        Манго        |   $1,69    | $1.69 за шт |
 |      Клубника       |   $1,50    |    $4,99    |
 |  Малина (150? гр.)  |     $1     |    $4.99    |
 | Голубика (150? гр.) |     $1     |    $3.50    |
-|      Апельсины      |    ¢79     |             |
-|       Яблоки        |    ¢99     |             |
-|      Помидоры       |    ¢79     |             |
+|      Апельсины      |    ¢79     |    $1,59    |
+|       Яблоки        |    ¢99     |    $1,99    |
+|      Помидоры       |    ¢79     |    $2,99    |
 
 
 Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы и ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
@@ -53,6 +53,10 @@ Farmer's market - это событие, которое проходит в ка
 
 Здесь мы покупаем все, что не нашли в China town-e. 
 С вегетарианскими продуктами в америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
+
+{% include image src="IMG_1289.jpg" %}
+<sub> <sup>*на этом фото нет ни одного мясного изделия*
+
 
 **Whole Foods**. Здесь все прекрасно, вкусно и чаще всего полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
 Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то можно остаться без кошелька.
@@ -66,10 +70,13 @@ Farmer's market - это событие, которое проходит в ка
 **Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
 И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал. - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
 
-**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее и находится рядом с домом. Продукты хорошего качества и можно купить много всего интересного и необычного. Особенно если Азбуку Вкуса в Питере ты обходил стороной. Большинство продуктов мы покупаем именно здесь. 
+**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, находится рядом с домом и продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Особенно если Азбуку Вкуса в Питере ты обходил стороной. Большинство продуктов мы покупаем именно здесь. 
 Из интересного, первое время нам очень нравилась индийская замороженная еда. Хоть это и полуфабрикат, но состав очень хороший. Разогрел в духовке и по вкусу тоже самое, что в ресторане. Только в 3 раза дешевле.
-Еще здесь много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
-Очень удобно если ты где-то гуляешь зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4.50.
+Также мы здесь покупаем орехи. Их очень много разных видов и продаются они чаще всего в пакетике по одному паунду.
+Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
+Очень удобно если ты где-то гуляешь зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4,49.
+
+{% include image src="IMG_1324.jpg" %}
 
 Я постаралась быть краткой, хоть, возможно, это и не очень хорошо получилось. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут кушаем. 
 
@@ -88,3 +95,6 @@ Farmer's market - это событие, которое проходит в ка
 * кокосовое масло
 
 PS: гречку и манку можно купить в русском магазине или на Amazon :)
+
+
+наши расходы $840 + рынок около $1000
