--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -22,37 +22,46 @@ images:
 
 Итак, с мерами измерения разобрались, можно приступать к покупкам. 
 
-Предлагаю начать с фруктов и овощей. В нашем рационе они занимают первое и самое большое место. 
+Предлагаю начать с **фруктов и овощей**. В нашем рационе они занимают первое и самое большое место. 
 
-**Фрукты и овощи** можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
+Их можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
 
-Farmer's market - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цена на рынке очень близкие к тому, что вы найдете в супермаркете. Но отличием в том, что на рынке больше вероятность купить Organic. и можно пообщаться с человеком, который вырастил их. 
+**Farmer's market** - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цена на рынке очень близкие к тому, что вы найдете в супермаркете. Но отличием в том, что на рынке больше вероятность купить Organic. и можно пообщаться с человеком, который вырастил их. 
 
 Обычно местные жители уже знают, какой рынок им нравится больше и ходят туда каждую неделю.
 
+{% include image src="2017-05-21_10-51-14_166.jpeg" %}
+ 
 Второй и наш вариант: China town. Почему "наш вариант"? Потому что мы живем неподалеку и можем позволить ходить туда. На транспорте, конечно, мы бы туда не поехали. В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это по сути большой продуктовый рынок. Здесь можно купить все известные и не известные нам фрукты и овощи. Цены отличаются раза в 3-4 по отношению к ценам в супермаркете или на farmer's market и продукты всегда свежие.
 
 Ниже примеры цен (за 1 pound, то есть 453гр):
 
-|                     | China Town | Супермаркет |
-|:-------------------:|:----------:|:-----------:|
-|       Черешня       |   $0,99    |    $2,99    |
-|      Виноград       |   $0,99    |    $2,99    |
-|        Манго        |   $1,69    | $1.69 за шт |
-|      Клубника       |   $1,50    |    $4,99    |
-|  Малина (150? гр.)  |     $1     |    $4.99    |
-| Голубика (150? гр.) |     $1     |    $3.50    |
-|      Апельсины      |    ¢79     |    $1,59    |
-|       Яблоки        |    ¢99     |    $1,99    |
-|      Помидоры       |    ¢79     |    $2,99    |
+|                    | China Town | Супермаркет |
+|:------------------:|:----------:|:-----------:|
+|      Черешня       |   $0,99    |    $2,99    |
+|      Виноград      |   $0,99    |    $2,99    |
+|       Манго        |   $1,69    | $1.69 за шт |
+|      Клубника      |   $1,50    |    $4,99    |
+|  Малина (150 гр.)  |     $1     |    $4.99    |
+| Голубика (150 гр.) |     $1     |    $3.50    |
+|     Апельсины      |    ¢79     |    $1,59    |
+|       Яблоки       |    ¢99     |    $1,99    |
+|      Помидоры      |    ¢79     |    $2,99    |
 
 
-Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы и ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
+{% include image src="2017-06-09_11-38-14_083.jpeg" %}
 
-Теперь перейдем к супермаркетам. В черте города я знаю 4 супермаркета: Whole Foods, Target, Costco, Trader Joe's, Safeway.
+Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
+
+
+{% include image src="2017-04-21_18-38-49_261_1.jpeg" %}
+
+
+Теперь перейдем к супермаркетам. В черте города я знаю 5 супермаркетов: Whole Foods, Target, Costco, Trader Joe's и Safeway.
 
 Здесь мы покупаем все, что не нашли в China town-e. 
-С вегетарианскими продуктами в америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
+
+С вегетарианскими продуктами в Америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
 
 {% include image src="IMG_1289.jpg" %}
 <sub> <sup>*на этом фото нет ни одного мясного изделия*
@@ -67,10 +76,12 @@ Farmer's market - это событие, которое проходит в ка
 
 И теперь самое интересное: Trader Joe's и Safeway. Оба эти магазина находятся рядом с домом и здесь мы все и закупаем. Они прекрасно дополняют друг друга.
 
+{% include image src="safeway-trjoe.jpg" %}
+
 **Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
 И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал. - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
 
-**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, находится рядом с домом и продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Особенно если Азбуку Вкуса в Питере ты обходил стороной. Большинство продуктов мы покупаем именно здесь. 
+**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, находится рядом с домом и продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Большинство продуктов мы покупаем именно здесь. 
 Из интересного, первое время нам очень нравилась индийская замороженная еда. Хоть это и полуфабрикат, но состав очень хороший. Разогрел в духовке и по вкусу тоже самое, что в ресторане. Только в 3 раза дешевле.
 Также мы здесь покупаем орехи. Их очень много разных видов и продаются они чаще всего в пакетике по одному паунду.
 Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
