--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -5,8 +5,29 @@ date: 2017-07-04 11:25:24 -0800
 comments: true
 original-date: 2017-07-04
 hidden: true
-thumbnail: IMG_1296.jpg
+thumbnail: img_1296.jpg
 images:
+  - img_1278.jpg
+  - img_1296.jpg
+  - img_1327.jpg
+  - safeway-trjoe.jpg
+  - trader joe's bag.jpg
+  - 2017-04-29_20-54-36_713.jpeg
+  - 2017-04-29_20-54-57_527.jpeg
+  - 2017-04-29_20-55-01_455.jpeg
+  - 2017-04-29_20-55-26_350.jpeg
+  - 2017-04-29_20-55-40_430.jpeg
+  - 2017-04-29_20-55-48_439.jpeg
+  - 2017-04-29_20-58-38_312.jpeg
+  - 2017-05-21_10-51-52_529.jpeg
+  - 2017-06-09_10-56-43_052.jpeg
+  - img_1280.jpg
+  - img_1283.jpg
+  - img_1303.jpg
+  - img_1304.jpg
+  - img_1314.jpg
+  - img_1316.jpg
+
 ---
 
 Пожалуй, один из самых актуальных вопросов на каждой кухне: "Что бы поесть?".
@@ -63,7 +84,7 @@ images:
 
 С вегетарианскими продуктами в Америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
 
-{% include image src="IMG_1289.jpg" %}
+{% include image src="img_1289.jpg.jpg" %}
 <sub> <sup>*на этом фото нет ни одного мясного изделия*
 
 
@@ -87,7 +108,7 @@ images:
 Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
 Очень удобно если ты где-то гуляешь зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4,49.
 
-{% include image src="IMG_1324.jpg" %}
+{% include image src="img_1324.jpg" %}
 
 Я постаралась быть краткой, хоть, возможно, это и не очень хорошо получилось. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут кушаем. 
 
