--- a/_posts/2017-03-17-5years.markdown
+++ b/_posts/2017-03-17-5years.markdown
@@ -4,6 +4,7 @@ title:  "Пять лет вместе. Это много или мало?"
 date:   2017-03-17 21:25:24 -0800
 categories: jekyll update
 comments: true
+permalink: /jekyll/update/2017/03/17/5years.html
 thumbnail: 2017-02-23_17-43-01_915.jpeg
 
 ---
