--- a/_posts/2017-03-31-friends.markdown
+++ b/_posts/2017-03-31-friends.markdown
@@ -4,6 +4,7 @@ title:  "Друзья, спасибо, что вы есть!"
 date:   2017-03-31 09:25:24 -0800
 categories: jekyll update
 comments: true
+permalink: /jekyll/update/2017/03/31/friends.html
 thumbnail: 2017-03-11_14-56-40_993.jpg
 ---
 
