--- a/_posts/2017-04-04-freedom.markdown
+++ b/_posts/2017-04-04-freedom.markdown
@@ -4,6 +4,7 @@ title:  "Этот вкус свободы"
 date:   2017-04-04 13:25:24 -0800
 categories: jekyll update
 comments: true
+permalink: /jekyll/update/2017/04/04/freedom.html
 thumbnail: IMG_9873.jpg
 images:
   - IMG_9423.JPG
