--- a/_posts/2017-02-10-new-apt.markdown
+++ b/_posts/2017-02-10-new-apt.markdown
@@ -4,6 +4,7 @@ title:  "\"Big day\""
 date:   2017-02-10 21:25:24 -0800
 categories: jekyll update
 comments: true
+permalink: /jekyll/update/2017/02/10/new-apt.html
 thumbnail: 2017-02-10_20-36-12_626.jpeg
 images:
   - 2017-02-10_17-29-44_609.jpeg
