add title to images

--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -7,7 +7,7 @@ original-date: 2017-07-04
 hidden: true
 thumbnail: img_1296.jpg
 images:
-  - img_1278.jpg
+  - img_1278.jpg | Тест для картинки
   - img_1296.jpg
   - img_1327.jpg
   - safeway-trjoe.jpg
@@ -89,7 +89,7 @@ images:
 
 С вегетарианскими продуктами в Америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
 
-{% include image src="img_1289.jpg.jpg" %}
+{% include image src="img_1289.jpg" %}
 <sub> <sup>*на этом фото нет ни одного мясного изделия*
 
 
