fix test titles

--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -7,7 +7,7 @@ original-date: 2017-07-04
 hidden: true
 thumbnail: img_1296.jpg
 images:
-  - img_1278.jpg | Тест для картинки
+  - img_1278.jpg | Текст для картинки в галереи
   - img_1296.jpg
   - img_1327.jpg
   - safeway-trjoe.jpg
@@ -51,7 +51,7 @@ images:
 
 Обычно местные жители уже знают, какой рынок им нравится больше и ходят туда каждую неделю.
 
-{% include image src="2017-05-21_10-51-14_166.jpeg" %}
+{% include image src="2017-05-21_10-51-14_166.jpeg" title="текст для картинки в тексте" %}
  
 Второй и наш вариант: China town. Почему "наш вариант"? Потому что мы живем неподалеку и можем позволить ходить туда. На транспорте, конечно, мы бы туда не поехали. В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это по сути большой продуктовый рынок. Здесь можно купить все известные и не известные нам фрукты и овощи. Цены отличаются раза в 3-4 по отношению к ценам в супермаркете или на farmer's market и продукты всегда свежие.
 
