--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -7,11 +7,8 @@ original-date: 2017-07-04
 hidden: true
 thumbnail: img_1296.jpg
 images:
-  - img_1278.jpg | Текст для картинки в галереи
   - img_1296.jpg
-  - img_1327.jpg
-  - safeway-trjoe.jpg
-  - trader joe's bag.jpg
+  - img_1327.jpg | С надписью "Organic" всегда дороже. 
   - 2017-04-29_20-54-36_713.jpeg
   - 2017-04-29_20-54-57_527.jpeg
   - 2017-04-29_20-55-01_455.jpeg
@@ -19,14 +16,12 @@ images:
   - 2017-04-29_20-55-40_430.jpeg
   - 2017-04-29_20-55-48_439.jpeg
   - 2017-04-29_20-58-38_312.jpeg
-  - 2017-05-21_10-51-52_529.jpeg
+  - 2017-05-21_10-51-52_529.jpeg | Фермерский рынок
   - 2017-06-09_10-56-43_052.jpeg
-  - img_1280.jpg
-  - img_1283.jpg
-  - img_1303.jpg
-  - img_1304.jpg
-  - img_1314.jpg
-  - img_1316.jpg
+  - img_1280.jpg | Длинные полки c огромным количеством консервов в Safeway
+  - img_1283.jpg | Длинные полки c огромным количеством консервов в Safeway
+  - img_1303.jpg | Здесь есть нарезанные фрукты, так что если вы гуляете и забежали в супермаркет, чтобы найти перекус, есть возможность купить что-то полезное.
+  - img_1316.jpg | Любимый отдел - орехи в Trader Joe's.
 
 ---
 
@@ -37,8 +32,8 @@ images:
 <!--separate--> 
 Перед первым походом за продуктами лучше немного подготовиться, ведь в магазине любой европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не закончилось. 
 
-Желательно иметь хотя бы примерное представление о том, что будет написано на упаковке:
-здесь не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.),
+На упаковке или ценнике будут написаны:
+не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.),
 не граммы/килограммы, а паунды (1 паунд=453.6 гр.). 
 
 Итак, с мерами измерения разобрались, можно приступать к покупкам. 
@@ -65,21 +60,28 @@ images:
 |      Клубника      |   $1,50    |    $4,99    |
 |  Малина (150 гр.)  |     $1     |    $4.99    |
 | Голубика (150 гр.) |     $1     |    $3.50    |
-|     Апельсины      |    ¢79     |    $1,59    |
-|       Яблоки       |    ¢99     |    $1,99    |
-|      Помидоры      |    ¢79     |    $2,99    |
+|     Апельсины      |    $0.79   |    $1,59    |
+|       Яблоки       |    $0.99   |    $1,99    |
+|      Помидоры      |    $0.79   |    $2,99    |
 
+Мой улов:
 
 {% include image src="2017-06-09_11-38-14_083.jpeg" %}
 
-Я купила в Ikea очень модную, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележку </a> и с ней мы ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
+У нас есть очень модная, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележка из Ikea </a> и с ней мы ходим за продуктами. Такой тележки фруктов и овощей нам хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
 
 
 {% include image src="2017-04-21_18-38-49_261_1.jpeg" %}
 
 
-Я хотела бы сейчас перейти к рассказу о супермаркетах, НО кое-кто мне подсказал, что вам скорее будет интересно узнать, где тут покупать гречку, манку и прочие русские продукты. 
-Если душа просит русской еды - надо смело отправляться в магазин Europa Plus. В Сан Франциско он один, но в окрестностях много других русских магазинов. Я оставлю вам фотографии, думаю вы все поймете =)
+Фрукты мы закупили, теперь перейдем к остальным продуктам.
+И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание Русскому магазину! Тому самому месту, где можно купить покупать гречку, манку и прочие продукты. 
+
+Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, но в окрестностях много других русских магазинов. 
+
+Крупами дело не ограничивается, здесь можно купить и сладости, привычные русскому человеку консервы, молочные продукты, русские газеты, некоторые из основных лекарств и даже русские аудио и видео кассеты, если вы конечно найдете, куда их вставить. =)
+
+В русском магазине мы были пару раз за пол года.
 
 
 Итак, про супермаркеты. В черте города я знаю 5 супермаркетов: Whole Foods, Target, Costco, Trader Joe's и Safeway.
