--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -7,19 +7,19 @@ original-date: 2017-07-04
 hidden: true
 thumbnail: img_1296.jpg
 images:
-  - img_1296.jpg
-  - img_1327.jpg | С надписью Organic всегда дороже. 
-  - 2017-04-29_20-54-36_713.jpeg | Русский магазин
-  - 2017-04-29_20-55-01_455.jpeg | Русский магазин
-  - 2017-04-29_20-55-26_350.jpeg | Тортики в русском магазине. Как в детстве, только страшно смотреть =)
-  - 2017-04-29_20-55-40_430.jpeg |  В русском магазине можно и духи купить.
-  - 2017-04-29_20-55-48_439.jpeg | И газетки...
-  - 2017-04-29_20-58-38_312.jpeg | И семечки
-  - 2017-05-21_10-51-52_529.jpeg | Фермерский рынок
-  - img_1280.jpg | Длинные полки c огромным количеством консервов в Safeway
-  - img_1283.jpg | Длинные полки c огромным количеством консервов в Safeway
-  - img_1303.jpg | Здесь есть нарезанные фрукты, так что если вы гуляете и забежали в супермаркет, чтобы найти перекус, есть возможность купить что-то полезное.
-  - img_1316.jpg | Любимый отдел - орехи в Trader Joe's.
+  - img_1296.jpg
+  - img_1327.jpg | С надписью Organic всегда дороже. 
+  - 2017-04-29_20-54-36_713.jpeg | Русский магазин
+  - 2017-04-29_20-55-01_455.jpeg | Русский магазин
+  - 2017-04-29_20-55-26_350.jpeg | Тортики в русском магазине. Как в детстве, только страшно смотреть =)
+  - 2017-04-29_20-55-40_430.jpeg |  В русском магазине можно и духи купить.
+  - 2017-04-29_20-55-48_439.jpeg | И газетки...
+  - 2017-04-29_20-58-38_312.jpeg | И се
+  - 2017-05-21_10-51-52_529.jpeg | Фермерский рынок
+  - img_1280.jpg | Длинные полки c огромным количеством консервов в Safeway
+  - img_1283.jpg | Длинные полки c огромным количеством консервов в Safeway
+  - img_1303.jpg | Здесь есть нарезанные фрукты, так что если вы гуляете и забежали в супермаркет, чтобы найти перекус, есть возможность купить что-то полезное.
+  - img_1316.jpg | Любимый отдел - орехи в Trader Joe's.
 
 ---
 
@@ -27,42 +27,44 @@ images:
 
 Мы уже некоторое время живем в штатах и немного сориентировались в продуктах, поэтому сегодня я хочу рассказать вам, что же мы едим, где покупаем продукты и сколько это стоит.
 
+
 <!--separate--> 
-Перед первым походом за продуктами лучше подготовиться, ведь в магазине европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не закончилось. 
+Перед первым походом за продуктами лучше подготовиться, ведь в магазине европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не закончилось. 
 
 На упаковке или ценнике будут написаны:
 не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.),
-не граммы/килограммы, а паунды (1 паунд=453.6 гр.). 
+не граммы/килограммы, а паунды (1 паунд=453.6 гр.). 
 
-Итак, с мерами измерения разобрались, приступаем к покупкам. 
+Итак, с мерами измерения разобрались, приступаем к покупкам. 
 
-Предлагаю начать с **фруктов и овощей**. В нашем рационе они занимают первое место. 
+Предлагаю начать с **фруктов и овощей**. В нашем рационе они занимают первое место. 
 
 Фрукты и овощи купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
 
-**Farmer's market** - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цены на рынке очень близкие к тому, что вы найдете в супермаркете. Но отличием в том, что на рынке больше вероятность купить Organic и можно пообщаться с человеком, который вырастил их. 
-
+**Farmer's market** - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цены на рынке очень близкие к тому, что вы найдете в супермаркете. Но отличием в том, что на рынке больше вероятность купить Organic и можно пообщаться с человеком, который вырастил их. 
+  
 Обычно местные жители уже знают, какой рынок им нравится больше и ходят туда каждую неделю.
 
+
 {% include image src="2017-05-21_10-51-14_166.jpeg" title="Фермерский рынок" %}
- 
+ 
 Второй и наш вариант: China town. Почему "наш вариант"? Потому что мы живем неподалеку и можем позволить ходить туда. В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это по сути большой продуктовый рынок. Здесь продаются все известные и не известные нам фрукты и овощи. Цены отличаются раза в 3-4 по отношению к ценам в супермаркете или на farmer's market и продукты всегда свежие.
 
 {% include image src="2017-07-10_16-08-06_495.jpeg" title="Китайский рынок" %}
 
 Ниже примеры цен (за 1 pound, то есть 453гр):
 
-|                    | China Town | Супермаркет |
+|                    | China Town | Супермаркет |
 |:------------------:|:----------:|:-----------:|
-|      Черешня       |   $0,99    |    $2,99    |
-|      Виноград      |   $0,99    |    $2,99    |
-|       Манго        |   $1,69    | $1.69 за шт |
-|      Клубника      |   $1,50    |    $4,99    |
-|  Малина (150 гр.)  |     $1     |    $4.99    |
-| Голубика (150 гр.) |     $1     |    $3.50    |
-|     Апельсины      |    $0.79   |    $1,59    |
-|       Яблоки       |    $0.99   |    $1,99    |
-|      Помидоры      |    $0.79   |    $2,99    |
+|      Черешня       |   $0,99    |    $2,99    |
+|      Виноград      |   $0,99    |    $2,99    |
+|       Манго        |   $1,69    | $1.69 за шт |
+|      Клубника      |   $1,50    |    $4,99    |
+|  Малина (150 гр.)  |     $1     |    $4.99    |
+| Голубика (150 гр.) |     $1     |    $3.50    |
+|     Апельсины      |    $0.79   |    $1,59    |
+|       Яблоки       |    $0.99   |    $1,99    |
+|      Помидоры      |    $0.79   |    $2,99    |
 
 Мой улов:
 
@@ -74,30 +76,33 @@ images:
 {% include image src="2017-04-21_18-38-49_261_1.jpeg" %}
 
 
-Фрукты закупили, теперь перейдем к остальным продуктам.
-И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание **Русскому магазину**! Тому самому месту, где можно купить покупать гречку, манку и прочие продукты. 
+Фрукты мы закупили, теперь перейдем к остальным продуктам.
+И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание **Русскому магазину**!  Тому самому месту, где можно купить гречку, манку и прочие продукты. 
 
-Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, но в окрестностях много других русских магазинов. 
+
+Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, но в окрестностях много других русских магазинов. 
 
 Крупами дело не ограничивается. Здесь можно купить сладости, привычные русскому человеку консервы, молочные продукты, семечки, русские газеты, некоторые из основных лекарств и даже русские аудио и видео кассеты, если вы конечно найдете, куда их вставить. =)
+
 
 В русском магазине мы были пару раз за пол года.
 
 {% include image src="2017-04-29_20-54-57_527.jpeg" title="Русский магазин" %}
 
-Итак, переходим к супермаркетам. 
+Итак, переходим к супермаркетам. 
 В черте города я знаю 5 супермаркетов: Whole Foods, Target, Costco, Trader Joe's и Safeway.
 
-Здесь мы покупаем все, что не нашли в China town-e. 
+Здесь мы покупаем все, что не нашли в China town-e. 
 
-С вегетарианскими продуктами в Америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где лежат как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
+С вегетарианскими продуктами в Америке, конечно, раздолье. Кроме того, что фрукты и овощи совсем другие на вкус и доступны круглый год, так еще и очень много вариантов замены мяса. В супермаркетах есть целые отделы, где можно найти как свежие, так и замороженные вегетарианские блюда: всегда есть несколько видов тофу, соевого мяса, "вегетарианских" котлет и т.д. Мы еще все не перепробовали и пока далеки от этого.
 
 {% include image src="img_1289.jpg" title="Раздолье для вегетарианца"%}
 <sub> <sup>*на этом фото нет ни одного мясного изделия*
 
 
-**Whole Foods**. Здесь все прекрасно, вкусно и чаще всего полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
-Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то рискуете остаться без кошелька.
+**Whole Foods**. Здесь все прекрасно, вкусно и чаще всего полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
+ +Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то рискуете остаться без кошелька.
+
 
 **Costco**. Оптовый магазин, в который нужно иметь клубную карту. Расположен так, что добраться туда можно только на машине. Здесь покупают все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Мы туда не ходим, поэтому это все, что я могу о нем рассказать.
 
@@ -107,20 +112,20 @@ images:
 
 {% include image src="safeway-trjoe.jpg" %}
 
-**Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
-И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал. - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
+**Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
+И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал. - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
 
-**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, идти от дома 5 минут и  продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Большинство продуктов мы покупаем именно здесь. 
+**Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, находится рядом с домом и продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Большинство продуктов мы покупаем именно здесь. 
 Из интересного, первое время нам очень нравилась индийская замороженная еда. Хоть это и полуфабрикат, но состав очень хороший. Разогрел в духовке и по вкусу тоже самое, что в ресторане. Только в 3 раза дешевле.
 Также мы здесь покупаем орехи. Их очень много разных видов и продаются они чаще всего в пакетике по одному паунду.
-Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
+Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
 Очень удобно если ты где-то гуляешь зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4,49.
 
 {% include image src="img_1324.jpg" title="Салатики в Trader Joe's" %}
 
-Я постаралась быть краткой. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут кушаем. 
+Я постаралась быть краткой. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут кушаем. 
 
-Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72. Приятного аппетита! 
+Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72. Приятного аппетита! 
 {% include image src="trader joe's bag.jpg" %}
 
 * cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью ... гр ...$
@@ -130,8 +135,9 @@ images:
 * beef-less: вегетарианский фарш (на вкус и вид ничем не отличается от обычного)
 * вегетарианские сосиски (тоже самое, что и с мясом)
 * черный шоколад без сахара $1.99
-* изюм 
+* изюм 
 * миндальное молочко
 * кокосовое масло
 
 PS: пока я готовила статью, мы подсчитали, что на продукты в среднем тратим около $1000 в месяц :)
+
