--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -14,7 +14,7 @@ images:
   - 2017-04-29_20-55-26_350.jpeg | Тортики в русском магазине. Как в детстве, только страшно смотреть =)
   - 2017-04-29_20-55-40_430.jpeg |  В русском магазине можно и духи купить.
   - 2017-04-29_20-55-48_439.jpeg | И газетки...
-  - 2017-04-29_20-58-38_312.jpeg | И се
+  - 2017-04-29_20-58-38_312.jpeg | И семечки
   - 2017-05-21_10-51-52_529.jpeg | Фермерский рынок
   - img_1280.jpg | Длинные полки c огромным количеством консервов в Safeway
   - img_1283.jpg | Длинные полки c огромным количеством консервов в Safeway
@@ -25,30 +25,31 @@ images:
 
 Пожалуй, один из самых актуальных вопросов на каждой кухне: "Что бы поесть?".
 
-Мы уже некоторое время живем в штатах и немного сориентировались в продуктах, поэтому сегодня я хочу рассказать вам, что же мы едим, где покупаем продукты и сколько это стоит.
+Мы уже некоторое время живем в штатах и немного сориентировались в магазинах, поэтому сегодня я хочу рассказать вам, что же мы едим, где покупаем продукты и сколько это стоит.
 
 
 <!--separate--> 
-Перед первым походом за продуктами лучше подготовиться, ведь в магазине европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не закончилось. 
+Перед первым походом за продуктами лучше заранее подготовиться, ведь европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не закончилось. 
 
 На упаковке или ценнике будут написаны:
 не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.),
 не граммы/килограммы, а паунды (1 паунд=453.6 гр.). 
 
-Итак, с мерами измерения разобрались, приступаем к покупкам. 
+Итак, приступаем к покупкам. 
 
 Предлагаю начать с **фруктов и овощей**. В нашем рационе они занимают первое место. 
 
-Фрукты и овощи купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или другие китайские/мексиканские лавочки).
+Фрукты и овощи можно купить в любом супермаркете, но гораздо интереснее идти на Farmer's market или в China Town (или в другие китайские/мексиканские лавочки).
 
-**Farmer's market** - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту цены на рынке очень близкие к тому, что вы найдете в супермаркете. Но отличием в том, что на рынке больше вероятность купить Organic и можно пообщаться с человеком, который вырастил их. 
+**Farmer's market** - это событие, которое проходит в каждом городе один или несколько раз в неделю. Местные фермеры привозят свой урожай на продажу. Также на рынке обычно много разной готовой еды. Поэтому кто-то идет туда за покупками, а кто-то просто ради приятного времяпрепровождения. Цены на Farmer's market-ах бывают разные. Все зависит от конкретного места. Но по моему опыту, цены на рынке очень близки к тому, что вы найдете в супермаркете. Отличие в том, что на рынке больше вероятность купить Organic и можно пообщаться с фермером. 
   
-Обычно местные жители уже знают, какой рынок им нравится больше и ходят туда каждую неделю.
-
+Обычно местные жители уже знают свой рынок и ходят туда каждую неделю.
 
 {% include image src="2017-05-21_10-51-14_166.jpeg" title="Фермерский рынок" %}
  
-Второй и наш вариант: China town. Почему "наш вариант"? Потому что мы живем неподалеку и можем позволить ходить туда. В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это по сути большой продуктовый рынок. Здесь продаются все известные и не известные нам фрукты и овощи. Цены отличаются раза в 3-4 по отношению к ценам в супермаркете или на farmer's market и продукты всегда свежие.
+Второй и наш вариант: China town. Почему "наш вариант"? Потому, что мы живем неподалеку и, благодаря этому, можем туда ходить. 
+
+В Сан Франциско один из самых больших China Town-ов в Америке. Одна его часть посвящена сувенирам, а вторая - это, по сути, большой продуктовый рынок. Здесь представлены все известные и не известные нам фрукты и овощи. Цены дешевле раза в 3-4, чем в супермаркете или на farmer's market, да и продукты всегда свежие.
 
 {% include image src="2017-07-10_16-08-06_495.jpeg" title="Китайский рынок" %}
 
@@ -70,27 +71,25 @@ images:
 
 {% include image src="2017-06-09_11-38-14_083.jpeg" %}
 
-У нас есть очень модная, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележка из Ikea </a> и с ней и ходим за продуктами. Такой тележки фруктов и овощей хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно такими же ценами, так что иногда он приносит продукты оттуда.
-
+У нас есть очень модная, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележка из Ikea </a>, с ней мы ходим за продуктами. Такого объема хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно таким же ассортиментом, так что иногда он приносит продукты оттуда.
 
 {% include image src="2017-04-21_18-38-49_261_1.jpeg" %}
 
 
-Фрукты мы закупили, теперь перейдем к остальным продуктам.
-И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание **Русскому магазину**!  Тому самому месту, где можно купить гречку, манку и прочие продукты. 
+Теперь перейдем к остальным продуктам.
 
+И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание **Русскому магазину**!  Тому самому месту, где можно купить гречку, манку и прочие любимые с детства продукты. 
 
-Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, но в окрестностях много других русских магазинов. 
+Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, хотя в окрестностях много других русских магазинов. 
 
-Крупами дело не ограничивается. Здесь можно купить сладости, привычные русскому человеку консервы, молочные продукты, семечки, русские газеты, некоторые из основных лекарств и даже русские аудио и видео кассеты, если вы конечно найдете, куда их вставить. =)
+Крупами дело не ограничивается. Здесь можно купить сласти, привычные консервы, молочные продукты, семечки, русские газеты, некоторые из основных лекарств и даже русские аудио и видео кассеты, если вы конечно найдете, куда их вставить. =)
 
-
-В русском магазине мы были пару раз за пол года.
+В этом магазине мы были пару раз за пол года.
 
 {% include image src="2017-04-29_20-54-57_527.jpeg" title="Русский магазин" %}
 
 Итак, переходим к супермаркетам. 
-В черте города я знаю 5 супермаркетов: Whole Foods, Target, Costco, Trader Joe's и Safeway.
+В черте города я знаю 5 сетей супермаркетов: Whole Foods, Target, Costco, Trader Joe's и Safeway.
 
 Здесь мы покупаем все, что не нашли в China town-e. 
 
@@ -100,30 +99,30 @@ images:
 <sub> <sup>*на этом фото нет ни одного мясного изделия*
 
 
-**Whole Foods**. Здесь все прекрасно, вкусно и чаще всего полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
- +Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то рискуете остаться без кошелька.
+**Whole Foods**. Здесь все прекрасно, вкусно и, чаще всего, полезно. Они очень внимательно следят за составом продуктов, которые выкладывают на прилавки, поэтому явно "химических" продуктов тут нет. Также есть отдел с лекарствами и витаминами, которые часто в других местах или аптеках просто не купить. Ну и, конечно, здесь можно найти какую-нибудь очередную полезную вкусняшку без сахара. 
+Минусы: очень дорого. Если ограничиться покупкой выборочных товаров - то все хорошо, но если закупаться всеми продуктами, то рискуете остаться без кошелька.
 
 
 **Costco**. Оптовый магазин, в который нужно иметь клубную карту. Расположен так, что добраться туда можно только на машине. Здесь покупают все: от продуктов питания до абонементов на фитнес, билетов в Диснейленд и бензина. Мы туда не ходим, поэтому это все, что я могу о нем рассказать.
 
 **Target**. Еда, одежда, техника, детские игрушки и много всего другого. Цены средние, зато есть магазин в финансовом районе города. Иногда удобно туда зайти.
 
-И теперь самое интересное: Trader Joe's и Safeway. Оба эти магазина находятся рядом с домом и здесь мы все и закупаем. Они прекрасно дополняют друг друга.
+И теперь самое интересное: Trader Joe's и Safeway. Оба эти магазина находятся рядом с домом. Здесь мы все и закупаем. Они прекрасно дополняют друг друга.
 
 {% include image src="safeway-trjoe.jpg" %}
 
-**Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
-И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал. - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
+**Safeway**. Здесь уже не контролируют состав продуктов, как это происходит в Whole Foods и Trader Joe's. Поэтому, будь любезен, читай состав самостоятельно. Однако, иногда могут быть очень хорошие находки. Такие как томатная паста или кукуруза без каких-либо добавок, включая соль и консерванты. Или, например, крупы по $1-$2. Килограмм овсянки за $2,50. 
+И лидер рейтинга - мороженое. Пинта низкокалорийного протеинового мороженого (473 мл.) всего 150 ккал. Есть еще вариант на 320 ккал - это мороженое уже не уступит по вкусу Ben&Jerry's, в которому куча сахара и 1300 ккал в среднем. 
 
 **Trader Joe's**. Можно сказать, что это почти как Whole Foods, только цены гораздо доступнее, находится рядом с домом и продавцы ходят в гавайских рубашках. Продукты хорошего качества и можно купить много всего интересного и необычного. Большинство продуктов мы покупаем именно здесь. 
 Из интересного, первое время нам очень нравилась индийская замороженная еда. Хоть это и полуфабрикат, но состав очень хороший. Разогрел в духовке и по вкусу тоже самое, что в ресторане. Только в 3 раза дешевле.
-Также мы здесь покупаем орехи. Их очень много разных видов и продаются они чаще всего в пакетике по одному паунду.
+Также мы здесь покупаем орехи. Очень много разных видов и продаются они чаще всего в пакетике по одному паунду.
 Еще есть много готовых салатиков и различных роллов. Соус обычно лежит отдельно, салаты всегда свежие и вкусные. 
-Очень удобно если ты где-то гуляешь зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4,49.
+Очень удобно во время прогулки зайти в Trader Joe's и купить такой салатик. Вкусно и полезно. Цены за салаты варьируются от $2.99 до $4,49.
 
 {% include image src="img_1324.jpg" title="Салатики в Trader Joe's" %}
 
-Я постаралась быть краткой. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут кушаем. 
+Я постаралась быть краткой. Надеюсь, теперь у вас есть некоторое представление о том, что мы тут едим. 
 
 Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72. Приятного аппетита! 
 {% include image src="trader joe's bag.jpg" %}
@@ -139,5 +138,5 @@ images:
 * миндальное молочко
 * кокосовое масло
 
-PS: пока я готовила статью, мы подсчитали, что на продукты в среднем тратим около $1000 в месяц :)
+PS: пока я готовила статью, мы подсчитали, что на продукты в среднем тратим около $1000 в месяц на двоих:)
 
