--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -29,7 +29,7 @@ images:
 
 
 <!--separate--> 
-Перед первым походом за продуктами лучше заранее подготовиться, ведь европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не закончилось. 
+Перед первым походом за продуктами лучше заранее подготовиться, ведь европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не ограничилось. 
 
 На упаковке или ценнике будут написаны:
 не миллилитры, а унции и галлоны (1 унция=29.57 мл., 1 галлон=3785 мл.),
@@ -53,7 +53,7 @@ images:
 
 {% include image src="2017-07-10_16-08-06_495.jpeg" title="Китайский рынок" %}
 
-Ниже примеры цен (за 1 pound, то есть 453гр):
+Ниже примеры цен (за 1 pound, то есть 453гр.):
 
 |                    | China Town | Супермаркет |
 |:------------------:|:----------:|:-----------:|
@@ -71,7 +71,7 @@ images:
 
 {% include image src="2017-06-09_11-38-14_083.jpeg" %}
 
-У нас есть очень модная, по словам Киры, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележка из Ikea </a>, с ней мы ходим за продуктами. Такого объема хватает на неделю с небольшим. Рядом с работой у Киры есть мексиканский магазин с примерно таким же ассортиментом, так что иногда он приносит продукты оттуда.
+У нас есть очень модная, по словам Кирилла, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележка из Ikea </a>, с ней мы ходим за продуктами. Такого объема хватает на неделю с небольшим. Рядом с работой у Кирилла есть мексиканский магазин с примерно таким же ассортиментом, так что иногда он приносит продукты оттуда.
 
 {% include image src="2017-04-21_18-38-49_261_1.jpeg" %}
 
@@ -80,9 +80,9 @@ images:
 
 И прежде чем начать рассказ о сетевых супермаркетах, я хочу уделить внимание **Русскому магазину**!  Тому самому месту, где можно купить гречку, манку и прочие любимые с детства продукты. 
 
-Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, хотя в окрестностях много других русских магазинов. 
+Если душа просит русской еды и вы живете в San Francisco - надо смело отправляться в магазин Europa Plus. В городе он один, хотя в окрестностях есть много других русских магазинов. 
 
-Крупами дело не ограничивается. Здесь можно купить сласти, привычные консервы, молочные продукты, семечки, русские газеты, некоторые из основных лекарств и даже русские аудио и видео кассеты, если вы конечно найдете, куда их вставить. =)
+Крупами дело не ограничивается. Здесь можно купить сласти, консервы, молочные продукты, семечки, русские газеты, некоторые из основных лекарств и даже русские аудио и видео кассеты, если вы конечно найдете, куда их вставить. =)
 
 В этом магазине мы были пару раз за пол года.
 
