small fixes in grocery post

--- a/_posts/2017-07-04-grocery.markdown
+++ b/_posts/2017-07-04-grocery.markdown
@@ -28,7 +28,7 @@ images:
 Мы уже некоторое время живем в штатах и немного сориентировались в магазинах, поэтому сегодня я хочу рассказать вам, что же мы едим, где покупаем продукты и сколько это стоит.
 
 
-<!--separate--> 
+<!--separate-->
 Перед первым походом за продуктами лучше заранее подготовиться, ведь европейский путешественник очень удивится совершенно незнакомым мерам измерения. На милях вместо километров в Америке дело не ограничилось. 
 
 На упаковке или ценнике будут написаны:
@@ -56,7 +56,7 @@ images:
 Ниже примеры цен (за 1 pound, то есть 453гр.):
 
 |                    | China Town | Супермаркет |
-|:------------------:|:----------:|:-----------:|
+|:-------------------|:----------:|:-----------:|
 |      Черешня       |   $0,99    |    $2,99    |
 |      Виноград      |   $0,99    |    $2,99    |
 |       Манго        |   $1,69    | $1.69 за шт |
@@ -71,7 +71,7 @@ images:
 
 {% include image src="2017-06-09_11-38-14_083.jpeg" %}
 
-У нас есть очень модная, по словам Кирилла, <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележка из Ikea </a>, с ней мы ходим за продуктами. Такого объема хватает на неделю с небольшим. Рядом с работой у Кирилла есть мексиканский магазин с примерно таким же ассортиментом, так что иногда он приносит продукты оттуда.
+У нас есть очень модная <a href="http://www.ikea.com/us/en/catalog/products/40330503/" target="_blank">тележка из Ikea</a>, с ней мы ходим за продуктами. Такого объема хватает на неделю с небольшим. Рядом с работой, у Кирилла есть мексиканский магазин с примерно таким же ассортиментом, так что иногда он приносит продукты оттуда.
 
 {% include image src="2017-04-21_18-38-49_261_1.jpeg" %}
 
