--- a/_posts/2017-07-25-grocery.markdown
+++ b/_posts/2017-07-25-grocery.markdown
@@ -126,15 +126,15 @@ images:
 Ниже пример корзины не совсем стандартных продуктов из Trader Joe's на общую сумму $72. Приятного аппетита! 
 {% include image src="trader joe's bag.jpg" %}
 
-* cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью $3.99
-* грецкие орехи и кешью $7.99
-* зелень $1.99
-* цельнозерновые хлебцы $3.99
+* cottage cheese - творог. на вкус похоже на то, что в питере называется зерновым творогом, только с солью  
+* грецкие орехи и кешью 
+* зелень 
+* цельнозерновые хлебцы  
 * beef-less: вегетарианский фарш (на вкус и вид ничем не отличается от обычного)
 * вегетарианские сосиски (тоже самое, что и с мясом) 
-* черный шоколад без сахара $1.99
-* изюм $2.99
-* миндальное молочко $2.99
+* черный шоколад без сахара  
+* изюм  
+* миндальное молочко  
 * кокосовое масло
 
 PS: пока я готовила статью, мы подсчитали, что на продукты в среднем тратим около $1000 в месяц на двоих:)
